# super

./: .gitignore  CHANGELOG.md  CodexSupervisor.icns  README.md  gradlew  gui.py  install.sh  pyproject.toml  settings.gradle.kts  supervisor.py
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/shield/tether/: MainActivity.kt
app/src/main/java/com/shield/tether/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
tests/: test_config.py  test_gui.py  test_protocol.py  test_utils.py
